--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,14 @@ jupyterlab==3.0.17
 matplotlib==3.5.1
 notebook==6.4.1
 pandas==1.3.0
+pre-commit==2.20.0
 pycocotools==2.0.2
 pylint==2.9.6
 scikit-learn==1.0.2
 seaborn==0.11.2
 torch==1.9.0
-torchvision==0.10.0
 torchmetrics==0.8.0
+torchvision==0.10.0
 tqdm==4.63.1
-wandb==0.12.15
 umap-learn==0.5.1
+wandb==0.12.15
