--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,3 +22,16 @@ repos:
     hooks:
     - id: isort
       args: [--profile=black]
+
+  - repo: https://github.com/myint/docformatter
+    rev: v1.5.0
+    hooks:
+    - id: docformatter
+      args: [--in-place, --blank]
+      files: ".*.py$"
+
+  - repo: https://github.com/PyCQA/pydocstyle
+    rev: 6.1.1
+    hooks:
+    - id: pydocstyle
+      args: [--convention=google]
